src/tests/snapshots/nyx__tests__window_opening__check_target_size@fsF-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BU\nconfig:\nwindow-rule {\n    open-fullscreen false\n}"
expression: snapshot
---
initial configure:
size: 640 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 640 × 0, bounds: 1280 × 720, states: [Activated]
